--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         
 // Your web app's Firebase configuration
 var firebaseConfig = {
-    apiKey: "AIzaSyBMd-8XA5Dznhc6x7BblqfJalzOViKOHpc",
-    databaseURL:"https://fir-auth-2c51b-default-rtdb.asia-southeast1.firebasedatabase.app/",
-    authDomain: "fir-auth-2c51b.firebaseapp.com",
-    projectId: "fir-auth-2c51b",
-    storageBucket: "fir-auth-2c51b.appspot.com",
-    messagingSenderId: "414318957348",
-    appId: "1:414318957348:web:d4424b198f667aef9659b1"
+    apiKey: "//your api key",
+    databaseURL:"//your database",
+    authDomain: "//your domain",
+    projectId: "your project id",
+    storageBucket: "//your storagebucket",
+    messagingSenderId: "//your messanger id",
+    appId: "//your appid"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
